--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- This is a link to a stylesheet which contains rules about how each element on the page should be defined-->
     <!-- Try swapping example1.css to another, and take a look at example1.css to see if you understand it-->
-    <link rel="stylesheet" type="text/css" href="example1.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>My Portfolio</title> <!-- The title displayed in the browser tab, not on the page itself -->
 
     <!-- This is a link to the vega-lite which we're using to make graphs -->
@@ -40,15 +40,15 @@
 <body> <!-- The body tag contains the elements that visitors to our page will see. -->
     <h1 style="margin-bottom: 0px;"> <!-- we can also style elements directly in the HTML by setting the style= atrribute of a tag. -->
         <!-- This is a header, it is the largest text on the page -->
-        An Example Portfolio
+        My Website
     </h1>
     <p style="margin-top: 0px; color: darkblue">
         <!-- we're setting the margin to 0px so the header and authour name are close together -->
-        Your Name | <a href="https://www.linkedin.com/in/finnmcevoy/">LinkedIn</a> | <a
+        Manalika | <a href="https://www.linkedin.com/in/finnmcevoy/">LinkedIn</a> | <a
             href="https://www.github.com/FM-ds">GitHub</a>
     </p>
     <h3>
-        This HTML file provides a simple template for a portfolio page. It contains a header, a few sections, and a few charts. This header can act as a summary for your page.
+        Data Masterclass
     </h3>
 
     <!-- We're organising the page into sections, with each section containing a chart, title and a description -->
