--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
         <figure id="figure_2"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
     </section>
 
+    <section>
+        <div class="chart-description"> <!-- we are grouping the title and description together so we can style them together -->
+            <h2>Section 3: Third Chart</h2>
+            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                This is a more advanced chart. We'll cover charts like this in more detail later today. Don't worry if you don't understand it yet.
+                Feel free to replace both charts with your own examples.
+            </p>
+        </div>
+        <figure id="figure_2"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+    </section>
+
     <!-- Do you want to add more sections? -->
         <!-- Try copying pasting the section above -->
         <!-- You'll need to change the id of the figure "<figure id="figure_3"... -->
